k8s_v1/service1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: service1-deployment
spec:
    selector:
        matchLabels:
            app: service1
    template:
        metadata:
            labels:
                app: service1
        spec:
            containers:
                - image: service1:0.2
                  imagePullPolicy: Never
                  name: service1
                  ports:
                      - containerPort: 8080
                  resources:
                      limits:
                          memory: 256Mi
                      requests:
                          cpu: 75m
                          memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
    name: service1-service
spec:
    ports:
        - port: 80
          targetPort: 8080
    selector:
        app: service1
