k8s_v1/service3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service3-deployment
spec:
  selector:
    matchLabels:
      app: service3
  template:
    metadata:
      labels:
        app: service3
    spec:
      containers:
        - image: service3:0.2
          imagePullPolicy: Never
          name: service3
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 75m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: service3-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: service3
